--- a/article/sample/hugo-shortcode/index.html
+++ b/article/sample/hugo-shortcode/index.html
@@ -16,7 +16,7 @@
 <meta name=generator content="Hugo 0.88.1">
 <link rel=icon href=https://hugo-theme-salt.okdyy75.com/favicon.ico>
 <link rel=canonical href=https://hugo-theme-salt.okdyy75.com/article/sample/hugo-shortcode/>
-<link rel=stylesheet href=https://hugo-theme-salt.okdyy75.com/scss/style.min.52cc1080ef0cf1eec91ebef68fe553b3556fb861126733b5b48383191d228813.css>
+<link rel=stylesheet href=https://hugo-theme-salt.okdyy75.com/scss/style.min.48c82505d9f36010fc6a7c1563c7f571aaa83ac405d94dc805be61bbf8e0097c.css>
 <link rel=stylesheet href=/css/vendor/@fortawesome/fontawesome-free/css/all.min.css media=print onload="this.media='all'">
 <link rel=stylesheet href=/css/vendor/github-markdown-css/github-markdown.css media=print onload="this.media='all'">
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LR5GBHW5M5"></script>
@@ -204,6 +204,20 @@ Hugo標準のショートコード表示サンプル
 </li>
 </ul>
 <img src=/article/sample/hugo-shortcode/thumbnail_hu3e76b4d1d3cd4901770e54ca242e78fa_5891_640x640_fit_q75_h2_box_3.webp alt=Hugo標準のショートコード表示サンプル loading=lazy class=single__article__thumbnail>
+<aside class=single__article__toc>
+<h3 class=single__article__toc__title><i class="fas fa-list-ul"></i>目次</h3>
+<nav id=TableOfContents>
+<ul>
+<li><a href=#figure>figure</a></li>
+<li><a href=#gist>gist</a></li>
+<li><a href=#highlight>highlight</a></li>
+<li><a href=#instagram>instagram</a></li>
+<li><a href=#tweet>tweet</a></li>
+<li><a href=#vimeo>vimeo</a></li>
+<li><a href=#youtube>youtube</a></li>
+</ul>
+</nav>
+</aside>
 <div class="single__article__content markdown-body">
 <p>Hugoで用意されているショートコード使用時の表示サンプルです</p>
 <h2 id=figure>figure</h2>
@@ -349,6 +363,14 @@ Z
 </nav>
 </div>
 <div class=partials__sidebar__card>
+<h3 class=partials__sidebar__title>
+タイムライン
+</h3>
+<nav class=partials__sidebar__twitterTimeline>
+<a class=twitter-timeline href=https://twitter.com/twitter>Tweets by twitter</a> <script async src=https://platform.twitter.com/widgets.js></script>
+</nav>
+</div>
+<div class=partials__sidebar__card>
 <h4 class=partials__sidebar__title>
 お知らせ
 </h4>
@@ -446,9 +468,9 @@ Hugoブログテーマ「Salt」とは？
 </li>
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/hugo/tips/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/tips/thumbnail_hu1c7b0f481417007a0d381ba184b84ba6_6299_192x108_fill_q75_h2_box_center_3.webp alt=Hugoを使い始めた人に捧げるTips12選 loading=lazy class=partials__sidebar__article__itemThumbnail>
+<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/tips/thumbnail_hu1c7b0f481417007a0d381ba184b84ba6_6299_192x108_fill_q75_h2_box_center_3.webp alt=Hugoを使い始めた人に捧げるTips11選 loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemTitle>
-Hugoを使い始めた人に捧げるTips12選
+Hugoを使い始めた人に捧げるTips11選
 </div>
 </a>
 </li>
@@ -511,9 +533,9 @@ Hugoブログテーマ「Salt」とは？
 </li>
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/hugo/tips/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/tips/thumbnail_hu1c7b0f481417007a0d381ba184b84ba6_6299_192x108_fill_q75_h2_box_center_3.webp alt=Hugoを使い始めた人に捧げるTips12選 loading=lazy class=partials__sidebar__article__itemThumbnail>
+<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/tips/thumbnail_hu1c7b0f481417007a0d381ba184b84ba6_6299_192x108_fill_q75_h2_box_center_3.webp alt=Hugoを使い始めた人に捧げるTips11選 loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemTitle>
-Hugoを使い始めた人に捧げるTips12選
+Hugoを使い始めた人に捧げるTips11選
 </div>
 </a>
 </li>
