deploy: 699dc17e6f84bde0fa4be778933b93a1f88d4b5e

--- a/article/hugo/tips/index.html
+++ b/article/hugo/tips/index.html
@@ -203,7 +203,7 @@ Hugoを使い始めた人に捧げるTips11選
 </a>
 </li>
 </ul>
-<img src=/article/hugo/tips/thumbnail_hu1c7b0f481417007a0d381ba184b84ba6_6299_640x640_fit_q75_h2_box_3.webp alt=Hugoを使い始めた人に捧げるTips11選 loading=lazy class=single__article__thumbnail>
+<img src=/article/hugo/tips/thumbnail_hu1c7b0f481417007a0d381ba184b84ba6_6299_640x640_fit_q75_h2_box_3.webp alt=Hugoを使い始めた人に捧げるTips11選 class=single__article__thumbnail>
 <aside class=single__article__toc>
 <h3 class=single__article__toc__title><i class="fas fa-list-ul"></i>目次</h3>
 <nav id=TableOfContents>
