--- a/article/salt/custom-figure/index.html
+++ b/article/salt/custom-figure/index.html
@@ -203,7 +203,7 @@ shortcode
 </a>
 </li>
 </ul>
-<img src=/article/salt/custom-figure/thumbnail_huabbb313cfc6fe0189548b2f94140ad9f_14559_640x640_fit_q75_h2_box_3.webp alt=画像のリサイズ・トリミング可能な自作ショートコード loading=lazy class=single__article__thumbnail>
+<img src=/article/salt/custom-figure/thumbnail_huabbb313cfc6fe0189548b2f94140ad9f_14559_640x640_fit_q75_h2_box_3.webp alt=画像のリサイズ・トリミング可能な自作ショートコード class=single__article__thumbnail>
 <aside class=single__article__toc>
 <h3 class=single__article__toc__title><i class="fas fa-list-ul"></i>目次</h3>
 <nav id=TableOfContents>
