--- a/article/salt/self-blog-card/index.html
+++ b/article/salt/self-blog-card/index.html
@@ -203,7 +203,7 @@ shortcode
 </a>
 </li>
 </ul>
-<img src=/article/salt/self-blog-card/thumbnail_hu887fde30b154802a30332967b448fbb6_8526_640x640_fit_q75_h2_box_3.webp alt=サイト内ブログカードを作る自作ショートコード loading=lazy class=single__article__thumbnail>
+<img src=/article/salt/self-blog-card/thumbnail_hu887fde30b154802a30332967b448fbb6_8526_640x640_fit_q75_h2_box_3.webp alt=サイト内ブログカードを作る自作ショートコード class=single__article__thumbnail>
 <aside class=single__article__toc>
 <h3 class=single__article__toc__title><i class="fas fa-list-ul"></i>目次</h3>
 <nav id=TableOfContents>
