--- a/article/sample/hugo-shortcode/index.html
+++ b/article/sample/hugo-shortcode/index.html
@@ -203,7 +203,7 @@ Hugo標準のショートコード表示サンプル
 </a>
 </li>
 </ul>
-<img src=/article/sample/hugo-shortcode/thumbnail_hu3e76b4d1d3cd4901770e54ca242e78fa_5891_640x640_fit_q75_h2_box_3.webp alt=Hugo標準のショートコード表示サンプル loading=lazy class=single__article__thumbnail>
+<img src=/article/sample/hugo-shortcode/thumbnail_hu3e76b4d1d3cd4901770e54ca242e78fa_5891_640x640_fit_q75_h2_box_3.webp alt=Hugo標準のショートコード表示サンプル class=single__article__thumbnail>
 <aside class=single__article__toc>
 <h3 class=single__article__toc__title><i class="fas fa-list-ul"></i>目次</h3>
 <nav id=TableOfContents>
