--- a/article/sample/markdown/index.html
+++ b/article/sample/markdown/index.html
@@ -198,7 +198,7 @@ shortcode
 </a>
 </li>
 </ul>
-<img src=/article/sample/markdown/thumbnail_hu8b2715e95ad414c90d2dcb05e7a44358_7366_640x640_fit_q75_h2_box_3.webp alt=マークダウン表示サンプル loading=lazy class=single__article__thumbnail>
+<img src=/article/sample/markdown/thumbnail_hu8b2715e95ad414c90d2dcb05e7a44358_7366_640x640_fit_q75_h2_box_3.webp alt=マークダウン表示サンプル class=single__article__thumbnail>
 <aside class=single__article__toc>
 <h3 class=single__article__toc__title><i class="fas fa-list-ul"></i>目次</h3>
 <nav id=TableOfContents>
