--- a/article/go/go-template/index.html
+++ b/article/go/go-template/index.html
@@ -213,7 +213,7 @@ Go言語Tips② Hugoで使われるlayoutの正体
 </a>
 </li>
 </ul>
-<img src=/article/go/go-template/thumbnail_hu2cc68145f3781b3dc807c5718be0f3c2_1960_640x640_fit_q75_h2_box_3.webp alt="Go言語Tips② Hugoで使われるlayoutの正体" loading=lazy class=single__article__thumbnail>
+<img src=/article/go/go-template/thumbnail_hu2cc68145f3781b3dc807c5718be0f3c2_1960_640x640_fit_q75_h2_box_3.webp alt="Go言語Tips② Hugoで使われるlayoutの正体" class=single__article__thumbnail>
 <aside class=single__article__toc>
 <h3 class=single__article__toc__title><i class="fas fa-list-ul"></i>目次</h3>
 <nav id=TableOfContents>
