--- a/article/go/variable/index.html
+++ b/article/go/variable/index.html
@@ -203,7 +203,7 @@ Go言語Tips① 変数について
 </a>
 </li>
 </ul>
-<img src=/article/go/variable/thumbnail_hu9b587e2c909b0d2c1d0529e80b52e0ee_2906_640x640_fit_q75_h2_box_3.webp alt="Go言語Tips① 変数について" loading=lazy class=single__article__thumbnail>
+<img src=/article/go/variable/thumbnail_hu9b587e2c909b0d2c1d0529e80b52e0ee_2906_640x640_fit_q75_h2_box_3.webp alt="Go言語Tips① 変数について" class=single__article__thumbnail>
 <aside class=single__article__toc>
 <h3 class=single__article__toc__title><i class="fas fa-list-ul"></i>目次</h3>
 <nav id=TableOfContents>
