--- a/article/hugo/about/index.html
+++ b/article/hugo/about/index.html
@@ -203,7 +203,7 @@ Hugoでできること
 </a>
 </li>
 </ul>
-<img src=/article/hugo/about/thumbnail_hu3631644e14d4f47f03ef96281b561b50_4022_640x640_fit_q75_h2_box_3.webp alt=Hugoでできること loading=lazy class=single__article__thumbnail>
+<img src=/article/hugo/about/thumbnail_hu3631644e14d4f47f03ef96281b561b50_4022_640x640_fit_q75_h2_box_3.webp alt=Hugoでできること class=single__article__thumbnail>
 <aside class=single__article__toc>
 <h3 class=single__article__toc__title><i class="fas fa-list-ul"></i>目次</h3>
 <nav id=TableOfContents>
