--- a/article/salt/about/index.html
+++ b/article/salt/about/index.html
@@ -203,7 +203,7 @@ Hugoブログテーマ「Salt」とは？
 </a>
 </li>
 </ul>
-<img src=/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_640x640_fit_q75_h2_box_3.webp alt=Hugoブログテーマ「Salt」とは？ loading=lazy class=single__article__thumbnail>
+<img src=/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_640x640_fit_q75_h2_box_3.webp alt=Hugoブログテーマ「Salt」とは？ class=single__article__thumbnail>
 <aside class=single__article__toc>
 <h3 class=single__article__toc__title><i class="fas fa-list-ul"></i>目次</h3>
 <nav id=TableOfContents>
