--- a/article/sample/no-tag-category/index.html
+++ b/article/sample/no-tag-category/index.html
@@ -185,7 +185,7 @@ shortcode
 </li>
 </ul>
 </section>
-<img src=/article/sample/no-tag-category/thumbnail_huf5d7724b65066df522cf2ab6e264ad1b_20603_640x640_fit_q75_h2_box_3.webp alt=タグとカテゴリーなしの記事 loading=lazy class=single__article__thumbnail>
+<img src=/article/sample/no-tag-category/thumbnail_huf5d7724b65066df522cf2ab6e264ad1b_20603_640x640_fit_q75_h2_box_3.webp alt=タグとカテゴリーなしの記事 class=single__article__thumbnail>
 <aside class=single__article__toc>
 <h3 class=single__article__toc__title><i class="fas fa-list-ul"></i>目次</h3>
 <nav id=TableOfContents></nav>
