--- a/article/sample/small-thumbnail/index.html
+++ b/article/sample/small-thumbnail/index.html
@@ -191,7 +191,7 @@ shortcode
 </li>
 </ul>
 </section>
-<img src=/article/sample/small-thumbnail/thumbnail_hu23d368fffdbc956785c13b257e99c985_3362_640x640_fit_q75_h2_box_3.webp alt=小さいサムネイル記事 loading=lazy class=single__article__thumbnail>
+<img src=/article/sample/small-thumbnail/thumbnail_hu23d368fffdbc956785c13b257e99c985_3362_640x640_fit_q75_h2_box_3.webp alt=小さいサムネイル記事 class=single__article__thumbnail>
 <aside class=single__article__toc>
 <h3 class=single__article__toc__title><i class="fas fa-list-ul"></i>目次</h3>
 <nav id=TableOfContents></nav>
