--- a/search/index.html
+++ b/search/index.html
@@ -3,21 +3,25 @@
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1">
-<title>2021年9月 | Hugoブログテーマ「Salt」</title>
+<title>検索 | Hugoブログテーマ「Salt」</title>
 <meta name=description content="このサイトはHugo用ブログテーマ「Salt」のサンプルサイトです">
-<meta property="og:title" content="2021年9月 | Hugoブログテーマ「Salt」">
-<meta property="og:description" content="このサイトはHugo用ブログテーマ「Salt」のサンプルサイトです"><meta property="og:url" content="https://hugo-theme-salt.okdyy75.com/archives/2021%E5%B9%B49%E6%9C%88/">
+<meta property="og:title" content="検索 | Hugoブログテーマ「Salt」">
+<meta property="og:description" content="このサイトはHugo用ブログテーマ「Salt」のサンプルサイトです"><meta property="og:url" content="https://hugo-theme-salt.okdyy75.com/search/">
 <meta property="og:site_name" content="Hugoブログテーマ「Salt」">
 <meta property="og:type" content="article">
-<meta name=twitter:title content="2021年9月 | Hugoブログテーマ「Salt」">
+<meta name=twitter:title content="検索 | Hugoブログテーマ「Salt」">
 <meta name=twitter:description content="このサイトはHugo用ブログテーマ「Salt」のサンプルサイトです"><meta name=robots content="index,follow">
 <meta name=googlebot content="index,follow">
 <meta name=generator content="Hugo 0.88.1">
 <link rel=icon href=https://hugo-theme-salt.okdyy75.com/favicon.ico>
-<link rel=canonical href=https://hugo-theme-salt.okdyy75.com/archives/2021%E5%B9%B49%E6%9C%88/>
-<link rel=alternate type=application/rss+xml href=https://hugo-theme-salt.okdyy75.com/archives/2021%E5%B9%B49%E6%9C%88/index.xml title=Hugoブログテーマ「Salt」>
+<link rel=canonical href=https://hugo-theme-salt.okdyy75.com/search/>
 <link rel=stylesheet href=https://hugo-theme-salt.okdyy75.com/scss/style.min.df993d918c7046158526e22e35aab12bb668a5e1725f1f6b4b85c8e51ad305d0.css>
 <link rel=stylesheet href=/css/vendor/@fortawesome/fontawesome-free/css/all.min.css media=print onload="this.media='all'">
+<script type=text/javascript src=/js/vendor/lunr/lunr.min.js></script>
+<script type=text/javascript src=/js/vendor/lunr-languages/lunr.stemmer.support.js></script>
+<script type=text/javascript src=/js/vendor/lunr-languages/tinyseg.js></script>
+<script type=text/javascript src=/js/vendor/lunr-languages/lunr.ja.js></script>
+<script type=text/javascript src=/js/search.min.js></script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LR5GBHW5M5"></script>
 <script>var doNotTrack=!1;if(!doNotTrack){window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-LR5GBHW5M5',{anonymize_ip:!1})}</script>
 </head>
@@ -137,69 +141,10 @@ shortcode
 <section class=list>
 <div class=list__inner>
 <div class=list__titleWrapper>
-<h1 id=list-title class=list__title>2021年9月</h1>
+<h1 id=list-title class=list__title>検索</h1>
 </div>
 <div id=results class=list__articleCardList>
-<article class=partials__articleCard>
-<div class=partials__articleCard__inner>
-<a href=https://hugo-theme-salt.okdyy75.com/article/sample/no-tag-category/ class=partials__articleCard__link></a>
-<img src=https://hugo-theme-salt.okdyy75.com/article/sample/no-tag-category/thumbnail_huf5d7724b65066df522cf2ab6e264ad1b_20603_640x360_fill_q75_h2_box_center_3.webp alt=タグとカテゴリーなしの記事 loading=lazy class=partials__articleCard__thumbnail>
-<h4 class=partials__articleCard__title>
-タグとカテゴリーなしの記事
-</h4>
-<div class=partials__articleCard__detail>
-<div class=partials__articleCard__detail__center></div>
-<div>
-<i class="fas fa-clock"></i>&nbsp;2021-09-10
 </div>
-</div>
-<div class=partials__articleCard__description>
-タグとカテゴリーが設定されていない場合の記事です
-</div>
-</div>
-</article>
-<article class=partials__articleCard>
-<div class=partials__articleCard__inner>
-<a href=https://hugo-theme-salt.okdyy75.com/article/sample/no-thumbnail/ class=partials__articleCard__link></a>
-<img src=https://hugo-theme-salt.okdyy75.com/image/default_noimage_hu6fe3b5ac74af77aa92279c364bc8fc3f_5361_640x360_fill_q75_h2_box_center_3.webp alt=サムネイルなしの記事 loading=lazy class=partials__articleCard__thumbnail>
-<h4 class=partials__articleCard__title>
-サムネイルなしの記事
-</h4>
-<div class=partials__articleCard__detail>
-<a href=/categories/%e3%82%b5%e3%83%b3%e3%83%97%e3%83%ab>
-<i class="fas fa-folder"></i>&nbsp;サンプル
-</a>
-<div class=partials__articleCard__detail__center></div>
-<div>
-<i class="fas fa-clock"></i>&nbsp;2021-09-10
-</div>
-</div>
-<div class=partials__articleCard__description>
-サムネイルが設定されていない場合の記事です
-</div>
-</div>
-</article>
-</div>
-<ul class="pagination pagination-default">
-<li class=page-item>
-<a href=/archives/2021%E5%B9%B49%E6%9C%88/ aria-label=First class=page-link role=button><span aria-hidden=true>&#171;&#171;</span></a>
-</li>
-<li class=page-item>
-<a href=/archives/2021%E5%B9%B49%E6%9C%88/ aria-label=Previous class=page-link role=button><span aria-hidden=true>&#171;</span></a>
-</li>
-<li class=page-item>
-<a href=/archives/2021%E5%B9%B49%E6%9C%88/ aria-label="Page 1" class=page-link role=button>1</a>
-</li>
-<li class="page-item active">
-<a href=# aria-current=page aria-label="Page 2" class=page-link role=button>2</a>
-</li>
-<li class="page-item disabled">
-<a href=# aria-disabled=true aria-label=Next class=page-link role=button tabindex=-1><span aria-hidden=true>&#187;</span></a>
-</li>
-<li class="page-item disabled">
-<a href=# aria-disabled=true aria-label=Last class=page-link role=button tabindex=-1><span aria-hidden=true>&#187;&#187;</span></a>
-</li>
-</ul>
 </div>
 </section>
 </div>
