deploy: de5bdb09f8feb97de5d9bae34417035fd8b76662

--- a/information/index.html
+++ b/information/index.html
@@ -318,6 +318,14 @@ shortcode
 <nav class=partials__sidebar__article>
 <ul class=partials__sidebar__article__items>
 <li class=partials__sidebar__article__item>
+<a href=https://hugo-theme-salt.okdyy75.com/article/hugo/search/ class=partials__sidebar__article__itemLink>
+<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/search/thumbnail_hu7a253d997b511fbff22929f86311ed19_4626_192x108_fill_q75_h2_box_center_3.webp alt=Hugoに検索機能を追加しよう loading=lazy class=partials__sidebar__article__itemThumbnail>
+<div class=partials__sidebar__article__itemTitle>
+Hugoに検索機能を追加しよう
+</div>
+</a>
+</li>
+<li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/salt/about/ class=partials__sidebar__article__itemLink>
 <img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=Hugoブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemTitle>
@@ -327,7 +335,7 @@ Hugoブログテーマ「Salt」とは？
 </li>
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/hugo/tips/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/tips/thumbnail_hu1c7b0f481417007a0d381ba184b84ba6_6299_192x108_fill_q75_h2_box_center_3.webp alt=Hugoを使い始めた人に捧げるTips11選 loading=lazy class=partials__sidebar__article__itemThumbnail>
+<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/tips/thumbnail_hu850c6f5958680582ad131d7609fc6b2a_2666_192x108_fill_q75_h2_box_center_3.webp alt=Hugoを使い始めた人に捧げるTips11選 loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemTitle>
 Hugoを使い始めた人に捧げるTips11選
 </div>
@@ -346,14 +354,6 @@ Go言語Tips② Hugoで使われるlayoutの正体
 <img src=https://hugo-theme-salt.okdyy75.com/article/go/variable/thumbnail_hu9b587e2c909b0d2c1d0529e80b52e0ee_2906_192x108_fill_q75_h2_box_center_3.webp alt="Go言語Tips① 変数について" loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemTitle>
 Go言語Tips① 変数について
-</div>
-</a>
-</li>
-<li class=partials__sidebar__article__item>
-<a href=https://hugo-theme-salt.okdyy75.com/article/hugo/about/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/about/thumbnail_hu3631644e14d4f47f03ef96281b561b50_4022_192x108_fill_q75_h2_box_center_3.webp alt=Hugoでできること loading=lazy class=partials__sidebar__article__itemThumbnail>
-<div class=partials__sidebar__article__itemTitle>
-Hugoでできること
 </div>
 </a>
 </li>
@@ -392,7 +392,7 @@ Hugoブログテーマ「Salt」とは？
 </li>
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/hugo/tips/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/tips/thumbnail_hu1c7b0f481417007a0d381ba184b84ba6_6299_192x108_fill_q75_h2_box_center_3.webp alt=Hugoを使い始めた人に捧げるTips11選 loading=lazy class=partials__sidebar__article__itemThumbnail>
+<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/tips/thumbnail_hu850c6f5958680582ad131d7609fc6b2a_2666_192x108_fill_q75_h2_box_center_3.webp alt=Hugoを使い始めた人に捧げるTips11選 loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemTitle>
 Hugoを使い始めた人に捧げるTips11選
 </div>
@@ -419,6 +419,17 @@ Hugoを使い始めた人に捧げるTips11選
 </a>
 </li>
 <li class=partials__sidebar__category__item>
+<a href=/categories/Hugo class=partials__sidebar__category__itemLink>
+<div>
+<i class="fas fa-arrow-circle-right partials__sidebar__category__itemIcon"></i>
+Hugo
+</div>
+<div class=partials__sidebar__category__itemCount>
+3
+</div>
+</a>
+</li>
+<li class=partials__sidebar__category__item>
 <a href=/categories/Salt%e3%81%ae%e4%bd%bf%e3%81%84%e6%96%b9 class=partials__sidebar__category__itemLink>
 <div>
 <i class="fas fa-arrow-circle-right partials__sidebar__category__itemIcon"></i>
@@ -434,17 +445,6 @@ Saltの使い方
 <div>
 <i class="fas fa-arrow-circle-right partials__sidebar__category__itemIcon"></i>
 Go言語
-</div>
-<div class=partials__sidebar__category__itemCount>
-2
-</div>
-</a>
-</li>
-<li class=partials__sidebar__category__item>
-<a href=/categories/Hugo class=partials__sidebar__category__itemLink>
-<div>
-<i class="fas fa-arrow-circle-right partials__sidebar__category__itemIcon"></i>
-Hugo
 </div>
 <div class=partials__sidebar__category__itemCount>
 2
@@ -491,6 +491,11 @@ Hugo
 </a>
 </li>
 <li class=partials__tagList__item>
+<a href=/tags/lunr class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>lunr
+</a>
+</li>
+<li class=partials__tagList__item>
 <a href=/tags/%e3%81%be%e3%81%a8%e3%82%81 class=partials__tagList__itemLink>
 <i class="fas fa-tag partials__tagList__itemIcon"></i>まとめ
 </a>
@@ -498,6 +503,11 @@ Hugo
 <li class=partials__tagList__item>
 <a href=/tags/%e3%83%9e%e3%83%bc%e3%82%af%e3%83%80%e3%82%a6%e3%83%b3 class=partials__tagList__itemLink>
 <i class="fas fa-tag partials__tagList__itemIcon"></i>マークダウン
+</a>
+</li>
+<li class=partials__tagList__item>
+<a href=/tags/%e6%a4%9c%e7%b4%a2 class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>検索
 </a>
 </li>
 </ul>
@@ -513,6 +523,11 @@ Hugo
 <div class=partials__sidebar__archive__yearItemTitle>2021年</div>
 <div class="archive-accordion-child-wrapper partials__sidebar__archive__monthListWrapper">
 <ul class="archive-accordion-child partials__sidebar__archive__monthList">
+<li class="archive-accordion-child partials__sidebar__archive__monthItem">
+<a href=/archives/2021%e5%b9%b410%e6%9c%88 class=partials__sidebar__archive__monthItemLink>
+2021年10月（1）
+</a>
+</li>
 <li class="archive-accordion-child partials__sidebar__archive__monthItem">
 <a href=/archives/2021%e5%b9%b49%e6%9c%88 class=partials__sidebar__archive__monthItemLink>
 2021年9月（12）
