deploy: 84a77a78a27ae30a0bc7bebaaa4c8a29ee6e1fd7

--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1">
 <title>Hugoブログテーマ「Salt」</title>
-<meta name=description content="このサイトはHugo用ブログテーマ「Salt」のサンプルサイトです">
+<meta name=description content="このサイトはHugo用ブログテーマ「Salt」のサンプルサイトです"><meta name=thumbnail content="https://hugo-theme-salt.okdyy75.com/image/og_large_hu5fec43481fc839ff2728ba739550a3bd_51027_1200x630_fill_q75_h2_box_center_3.webp"><meta property="og:locale" content="ja_JP">
 <meta property="og:title" content="Hugoブログテーマ「Salt」">
-<meta property="og:description" content="このサイトはHugo用ブログテーマ「Salt」のサンプルサイトです"><meta property="og:image" content="https://hugo-theme-salt.okdyy75.com/image/og_large_hu29515973d9eaf6867f72fb8eaec103f2_14147_1200x630_fill_q75_h2_box_center_3.webp"><meta property="og:url" content="https://hugo-theme-salt.okdyy75.com/">
+<meta property="og:description" content="このサイトはHugo用ブログテーマ「Salt」のサンプルサイトです"><meta property="og:image" content="https://hugo-theme-salt.okdyy75.com/image/og_large_hu5fec43481fc839ff2728ba739550a3bd_51027_1200x630_fill_q75_h2_box_center_3.webp">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630"><meta property="og:url" content="https://hugo-theme-salt.okdyy75.com/">
 <meta property="og:site_name" content="Hugoブログテーマ「Salt」">
-<meta property="og:type" content="website">
-<meta name=twitter:title content="Hugoブログテーマ「Salt」">
-<meta name=twitter:description content="このサイトはHugo用ブログテーマ「Salt」のサンプルサイトです"><meta name=twitter:image content="https://hugo-theme-salt.okdyy75.com/image/og_large_hu29515973d9eaf6867f72fb8eaec103f2_14147_1200x630_fill_q75_h2_box_center_3.webp">
+<meta property="og:type" content="website"><meta name=twitter:title content="Hugoブログテーマ「Salt」">
+<meta name=twitter:description content="このサイトはHugo用ブログテーマ「Salt」のサンプルサイトです"><meta name=twitter:image content="https://hugo-theme-salt.okdyy75.com/image/og_large_hu5fec43481fc839ff2728ba739550a3bd_51027_1200x630_fill_q75_h2_box_center_3.webp">
 <meta name=twitter:card content="summary_large_image"><meta name=robots content="index,follow">
 <meta name=googlebot content="index,follow">
-<meta name=generator content="Hugo 0.88.1">
-<link rel=icon href=https://hugo-theme-salt.okdyy75.com/favicon.ico>
-<link rel=canonical href=https://hugo-theme-salt.okdyy75.com/>
+<meta name=generator content="Hugo 0.89.4">
+<link rel=icon href=https://hugo-theme-salt.okdyy75.com/favicon.ico><link rel=apple-touch-icon href=https://hugo-theme-salt.okdyy75.com/image/icon.png>
+<link rel=apple-touch-icon sizes=180x180 href=https://hugo-theme-salt.okdyy75.com/image/icon_hu1521aad69fc65a528f1288721147084d_17714_180x180_fit_box_3.png>
+<meta name=msapplication-TileImage content="https://hugo-theme-salt.okdyy75.com/image/icon_hu1521aad69fc65a528f1288721147084d_17714_144x144_fit_box_3.png"><link rel=canonical href=https://hugo-theme-salt.okdyy75.com/>
 <link rel=alternate type=application/rss+xml href=https://hugo-theme-salt.okdyy75.com/index.xml title=Hugoブログテーマ「Salt」>
 <link rel=stylesheet href=https://hugo-theme-salt.okdyy75.com/scss/style.min.df993d918c7046158526e22e35aab12bb668a5e1725f1f6b4b85c8e51ad305d0.css>
 <link rel=stylesheet href=/css/vendor/@fortawesome/fontawesome-free/css/all.min.css media=print onload="this.media='all'">
@@ -454,7 +456,7 @@ Hugo標準のショートコード表示サンプル
 </li>
 </ul>
 <div class=partials__articleCard__description>
-Hugoで用意されているショートコード使用時の表示サンプルです figure スイカの画像 gist highlight &lt;section id="main"> &lt;div> &lt;h1 id="title">{{ .Title }}&lt;/h1> {{ range .Pages }} {{ .Render "summary"}} {{ end }} &lt;/div> &lt;/section> instagram Instagramのdeveloperアカウントが必要です。自前で用意する必要あり tweet Hugo 0.24 Released: Big archetype update + @Netlify _redirects etc. file supporthttps://t.co/X94FmYDEZJ #gohugo #golang @spf13 @bepsays &mdash; GoHugo.io (@GoHugoIO) June 21, 2017 vimeo youtube
+Hugoで用意されているショートコード使用時の表示サンプルです figure スイカの画像 gist highlight &lt;section id="main"> &lt;div> &lt;h1 id="title">{{ .Title }}&lt;/h1> {{ range .Pages }} {{ .Render "summary"}} {{ end }} &lt;/div> &lt;/section> instagram Instagramのdeveloperアカウントが必要です。自前で用意する必要あり tweet Owl bet you'll lose this staring contest 🦉 pic.twitter.com/eJh4f2zncC &mdash; San Diego Zoo Wildlife Alliance (@sandiegozoo) October 26, 2021 vimeo youtube
 </div>
 </div>
 </article>
@@ -603,7 +605,7 @@ Z
 <a href=mailto:okdyy75@gmail.com target=_blank class=partials__snsLinks__link--email>
 <i class="fa-lg fas fa-envelope"></i>
 </a>
-<a href=https://example.com target=_blank class=partials__snsLinks__link--other>
+<a href=https://github.com/okdyy75 target=_blank class=partials__snsLinks__link--other>
 <i class="fa-lg fas fa-link"></i>
 </a>
 </div>
@@ -935,7 +937,7 @@ Go言語
 <li><a href=https://github.com/okdyy75/hugo-theme-salt/issues>お問い合わせ</a></li></ul>
 </div>
 <p class=partials__footer__copyright>
-© 2021 my_name<br>
+© 2021 okdyy75<br>
 Powered by <a href=https://gohugo.io/ target=_blank>Hugo</a> | Hugo Theme Salt
 </p>
 </div>
