--- a/search/index.html
+++ b/search/index.html
@@ -15,7 +15,10 @@
 <link rel=icon href=https://hugo-theme-salt.okdyy75.com/favicon.ico><link rel=apple-touch-icon href=https://hugo-theme-salt.okdyy75.com/image/icon.png>
 <link rel=apple-touch-icon sizes=180x180 href=https://hugo-theme-salt.okdyy75.com/image/icon_hufcfbdcc219ffada1cbabf236b1db3300_1050873_180x180_fit_box_3.png>
 <meta name=msapplication-TileImage content="https://hugo-theme-salt.okdyy75.com/image/icon_hufcfbdcc219ffada1cbabf236b1db3300_1050873_144x144_fit_box_3.png"><link rel=canonical href=https://hugo-theme-salt.okdyy75.com/search/>
-<link rel=stylesheet href=https://hugo-theme-salt.okdyy75.com/scss/style.min.df993d918c7046158526e22e35aab12bb668a5e1725f1f6b4b85c8e51ad305d0.css>
+<link rel=preload href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" as=style>
+<link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" media=print onload="this.media='all'">
+<link rel=stylesheet href=https://hugo-theme-salt.okdyy75.com/scss/style.min.bfbae98c9a3a6c0d4287c380badedcdaadb6e303a82d7d4ef4a20f8b338fcbf7.css>
+<link rel=preload href=/css/vendor/@fortawesome/fontawesome-free/css/all.min.css as=style>
 <link rel=stylesheet href=/css/vendor/@fortawesome/fontawesome-free/css/all.min.css media=print onload="this.media='all'">
 <script type=text/javascript src=/js/vendor/lunr/lunr.min.js></script>
 <script type=text/javascript src=/js/vendor/lunr-languages/lunr.stemmer.support.js></script>
