--- a/404.html
+++ b/404.html
@@ -12,9 +12,11 @@
 <meta name=twitter:description content="このサイトはHugo用ブログテーマ「Salt」のサンプルサイトです"><meta name=robots content="index,follow">
 <meta name=googlebot content="index,follow">
 <meta name=generator content="Hugo 0.89.4">
-<link rel=icon href=https://hugo-theme-salt.okdyy75.com/favicon.ico><link rel=apple-touch-icon href=https://hugo-theme-salt.okdyy75.com/image/icon.png>
+<link rel=icon href=https://hugo-theme-salt.okdyy75.com/favicon.ico>
+<link rel=apple-touch-icon href=https://hugo-theme-salt.okdyy75.com/image/icon.png>
 <link rel=apple-touch-icon sizes=180x180 href=https://hugo-theme-salt.okdyy75.com/image/icon_hufcfbdcc219ffada1cbabf236b1db3300_1050873_180x180_fit_box_3.png>
-<meta name=msapplication-TileImage content="https://hugo-theme-salt.okdyy75.com/image/icon_hufcfbdcc219ffada1cbabf236b1db3300_1050873_144x144_fit_box_3.png"><link rel=canonical href=https://hugo-theme-salt.okdyy75.com/404.html>
+<meta name=msapplication-TileImage content="https://hugo-theme-salt.okdyy75.com/image/icon_hufcfbdcc219ffada1cbabf236b1db3300_1050873_144x144_fit_box_3.png">
+<link rel=canonical href=https://hugo-theme-salt.okdyy75.com/404.html>
 <link rel=preload href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" as=style>
 <link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" media=print onload="this.media='all'">
 <link rel=stylesheet href=https://hugo-theme-salt.okdyy75.com/scss/style.min.bfbae98c9a3a6c0d4287c380badedcdaadb6e303a82d7d4ef4a20f8b338fcbf7.css>
